# Lua2SC

./: .gitmodules  CMakeLists.txt  LICENSE.txt  README.md
Lua2SC-bin/: lua2sc.lua
Lua2SC-bin/lua/examples/: example.lua  testwindow.lua
Lua2SC-bin/lua/init/: TA.lua  chords.lua  gui.lua  midi.lua  scales.lua
Lua2SC-bin/lua/sc/: Metronom.lua  combinatorics.lua  declareugens4.lua  miditoosc.lua  number2string.lua  phonemes.lua  playersppq.lua  playersscgui.lua  routines.lua  synthdefSCgui.lua  synthdefsc.lua  ugensdump.sc
LuaJIT/: CMakeLists.txt
launcher/: Lua2SC.bat  Lua2SC.sh
lua/: lua2sc.bat  pmidi.lua
lua/init/: callback_wrappers.lua  gui.lua  init.lua  sysex.lua  utils.lua
lua/sc/: Compilesynth.lua  MetronomLanes.lua  dirutils.lua  init.lua  log.lua  playerssc.lua  scugendump.sc  scugendump2.sc  stream.lua  synthdefSCRead.lua  udpSC.lua  utilsstream.lua
lua2SC/: lua2sc.bat  lua2sc.lua
lua2SC/doc/: index.html
lua2SC/doc/modules/: combinatorics.html  compilesynth.html  debugger.html  gui.html  metronomlanes.html  miditoosc.html  number2string.html  stream.html  synthdefsc.html  synthdefscread.html  ta.html  udpsc.html  utils.html  utilsstream.html
lua2SC/examples/: earlyRefs.lua  janicek.lua  sclua_gui.lua  violin_guiplay.lua  violin_midiplay.lua  voice.lua
lua2SC/examples/graphics/: grafics1.lua  grafics3.lua  plotbuffer.lua  plotenv.lua  plotsynth.lua  timeplot.lua
lua2SC/examples/pieces/: readme.txt
lua2SC/examples/pieces/7thtrumpet/: 7trumpetsE3.lua
lua2SC/examples/pieces/aerofloat/: aerofloat.lua
lua2SC/examples/pieces/african_room/: african_room.lua  synthdefs.lua
lua2SC/examples/pieces/breathing/: breathing.lua
lua2SC/examples/pieces/cappadocia/: cappadocia.lua
lua2SC/examples/pieces/clarinet_quintet/: synthdefs.lua
lua2SC/examples/pieces/cycles/: cycles.lua
lua2SC/examples/pieces/humanoids/: humanoids.lua
lua2SC/examples/pieces/kyrie/: kyrie.lua
lua2SC/examples/pieces/mixolydian_mantra/: mixolydian_mantra.lua
lua2SC/examples/pieces/resonator/: resonator.lua
lua2SC/examples/soundfont/: sfzreader_midi.lua  strings.lua  stringsDWG.lua
lua2SC/genugens/: cleandumpedugens.lua  comparedumped.lua  gen-cat.scd  gen-db.scd  genugens.bat  genugens.scd  josiahjson.sc  operators.sc  scugendump.scd  scugendumpjson.scd  ugens.json
lua2SC/lua/: ProFi.lua  file_settings.lua  lanesutils.lua  luaAV.lua  luajit_p.lua  osc.lua  oscfunc.lua  pmidi.lua  scriptrun.lua  scserver.lua  sctcp.lua  scudp.lua
lua2SC/lua/custom/: ini2t.lua  init.lua
lua2SC/lua/ide/: bootsc.lua  callstack.lua  config.lua  editor.lua  findreplace.lua  getkeywords.lua  getkeywordsNOTLANES.lua  help.lua  ide.lua  ide_lane.lua  ide_server.lua  identifiers.lua  idescriptrun.lua  lua_xpm.lua  oscfunc.lua  perspectives.lua  scriptgui.lua  scriptrun.lua  scriptrunBAK.lua  scudp.lua  settings.lua  toppanel.lua
lua2SC/lua/num/: Kaes.lua  Kaes11.lua  ParametricTract.lua  ParametricTractB.lua  complex.lua  complexjit.lua  female_tract_data.lua  filter_design.lua  ljcomplex.lua  male_tract_data.lua  matrix.lua  polynomial.lua  torational.lua  tract.lua  tract_female.lua  tract_male.lua  tract_male10.lua  tract_male12.lua  tract_male14.lua  tract_male16.lua  tract_male18.lua  tract_male20.lua  tract_male22.lua  tract_male24.lua  tract_male26.lua  tract_male28.lua  tract_male30.lua  tract_male32.lua  tract_male34.lua  tract_male36.lua  tract_male38.lua  tract_male40.lua  tract_male42.lua  tract_male44.lua  tractorig.lua  vocaltract.lua  vocaltractB.lua
lua2SC/lua/sc/: Compilesynth.lua  ER.lua  MetronomDummy.lua  MetronomLanes.lua  MetronomLanesBAK.lua  MetronomLanesSCH.lua  PhISEMSynth.lua  TA.lua  atk.lua  callback_wrappers.lua  combinatorics.lua  ctrl_bus.lua  debugger.lua  debuggerCALLRET.lua  debuggerCALLRETverGetf.lua  debuggerDUMMY.lua  debuggerLINE.lua  declareugens.lua  declareugens2.lua  declareugens3.lua  declareugens4.lua  declareugens5.lua  dumpedugens.lua  gui.lua  handwrittenugens.lua  init.lua  lilypond.lua  log.lua  midi.lua  miditoosc.lua  myugens.lua  named_events.lua  nrt.lua  number2string.lua  operators.sc  oscfunc.lua  path.lua  phonemes.lua  phonemesOLD.lua  playersppq.lua  (+19 more)
lua2SC/lua/sc_comm_loop/: init.lua  scinternal.lua  sctcp.lua  scudp.lua
lua2SC/lua/sclua/: Buffer.lua  Bus.lua  Group.lua  Server.lua  Synth.lua  funcs.lua
lua2SC/lua/ugendefs/: AdachiAyers.lua  DWGClarinet.lua  DWGFlute.lua  DWGReverb.lua  IIRf.lua  KLJunction.lua  Karplus.lua  MembraneV.lua  MyPlucked.lua  PitchTracker.lua  PluckSynth.lua  SonLPC.lua  VSTPlugin.lua  myugens.lua
lua2SC/lua2scsamples/: recordmidi.lua  simple_theme.lua  violin_guiplay.lua  violin_midiplay.lua  voice.lua
lua2SC/lua2scsamples/graphics/: grafics2.lua  plotbuffer.lua
lua2SC/lua2scsamples/pieces/: readme.txt
lua2SC/lua2scsamples/soundfont/: sfzreader_midi.lua  stringsDWG.lua
lua2SC/lua2scsamples/vstplugin/: VSTPluginInst.lua
lua2SC/presets/: SOSsnare.prSC  aaa.prSC  aaaa.prSC  alambres.prSC  bow.prSC  congabasspr.prSC  congapr.prSC  congaslappr.prSC  congatipspr.prSC  counterbass.prSC  cowbell.prSC  cowbell2.prSC  kik.prSC  kik2.prSC  miniarpresonz.prSC  plucknylon.prSC  rod.prSC  testblock.prSC  testblock2.prSC  xxxxxxx.prSC
lua2SC/renderSChelp/: build_sclang.cfg  buildhelp.bat  buildhelp.sh
lua2SC/samples/: alotofontrols.lua  iupluasample.lua  lanescancel.lua  latin2.lua  sample1.lua  sample2.lua  sample3.lua  testlatin.lua  testpiano.lua  testselect.lua  testwks.lua  testxpcll.lua  wxsample.lua  xpcalltest.lua
lua2SC/scluasamples/: example1.lua  example2.lua  example3.lua
luabin/lua/: pmidi.lua
luabin/lua/lanesdebug/: debugger.lua  main.lua  script.lua
luabin/lua/pl/: compat.lua
luaportmidi/: CMakeLists.txt  luaportmidi.c  pmidi.lua
luasocket_cmake/: CMakeLists.txt
osclua/: CMakeLists.txt  help.txt  osclua.cpp  osclua.h
oscpack_1_1_0/osc/: OscReceivedElements.cpp  OscReceivedElements.h  OscTypes.h
portmidi/: CMakeLists.txt
portmidi/pm_common/: CMakeLists.txt
random/: CMakeLists.txt  Makefile  README  lrandom.c  random.c  test.lua
wxLuaBundled/: CMakeLists.txt
(+26 files in other folders)
