PROJECT(luaportmidi C)
CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
set(PORTMIDI_DIR ${CMAKE_SOURCE_DIR}/portmidi)

add_subdirectory(${PORTMIDI_DIR} ${CMAKE_BINARY_DIR}/portmidi EXCLUDE_FROM_ALL)
set(PORTMIDI_INCLUDES ${PORTMIDI_DIR}/pm_common)
set(PORTTIME_INCLUDES ${PORTMIDI_DIR}/porttime)

INCLUDE_DIRECTORIES(${LUA_INCLUDE_DIR})
INCLUDE_DIRECTORIES(${PORTMIDI_INCLUDES})
INCLUDE_DIRECTORIES(${PORTTIME_INCLUDES})

if (LUA_COMPAT_ALL)
	add_definitions(-DLUA_COMPAT_ALL)
endif()
add_definitions(-DLUA_BUILD_AS_DLL -DLUA_LIB)
ADD_LIBRARY(pmidi SHARED luaportmidi.c )

#TARGET_LINK_LIBRARIES(pmidi ${LUA_LIBRARY} ${PORTMIDI_LIBRARY} winmm)
TARGET_LINK_LIBRARIES(pmidi ${LUA_LIBRARY} portmidi-static winmm)
SET_TARGET_PROPERTIES(pmidi PROPERTIES PREFIX "" OUTPUT_NAME core)

INSTALL (TARGETS pmidi RUNTIME DESTINATION ./pmidi LIBRARY DESTINATION ./pmidi)
install(FILES pmidi.lua DESTINATION ./lua)

