PROJECT(luaportmidi C)
CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
set(PORTMIDI_DIR ${CMAKE_CURRENT_SOURCE_DIR}/../portmidi)

add_subdirectory(${PORTMIDI_DIR} ${CMAKE_BINARY_DIR}/portmidi EXCLUDE_FROM_ALL)
#add_subdirectory(portmidi  EXCLUDE_FROM_ALL)
set(PORTMIDI_INCLUDES ${PORTMIDI_DIR}/pm_common)
set(PORTTIME_INCLUDES ${PORTMIDI_DIR}/porttime)

INCLUDE_DIRECTORIES(${LUA_INCLUDE_DIR})
INCLUDE_DIRECTORIES(${PORTMIDI_INCLUDES})
INCLUDE_DIRECTORIES(${PORTTIME_INCLUDES})

if (LUA_COMPAT_ALL)
	add_definitions(-DLUA_COMPAT_ALL)
endif()

set(LINK_LIBS)
if(WIN32)
add_definitions(-DLUA_BUILD_AS_DLL -DLUA_LIB)
set(LINK_LIBS winmm)
endif()

ADD_LIBRARY(pmidi SHARED luaportmidi.c )

if(WIN32)
set(LUA_LIBRARY_L ${LUA_LIBRARY})
else()
set(LUA_LIBRARY_L "")
endif()

TARGET_LINK_LIBRARIES(pmidi ${LUA_LIBRARY_L} portmidi-static ${LINK_LIBS})
SET_TARGET_PROPERTIES(pmidi PROPERTIES PREFIX "" OUTPUT_NAME core)

INSTALL (TARGETS pmidi RUNTIME DESTINATION ${LUAJIT_BIN}/pmidi LIBRARY DESTINATION ${LUAJIT_BIN}/pmidi)
install(FILES pmidi.lua DESTINATION ${LUAJIT_BIN}/lua)

